Added colored feather blocks Colored feather and feather block can't be crafted yet

--- a/src/main/resources/assets/birds_and_feathers/lang/en_us.json
+++ b/src/main/resources/assets/birds_and_feathers/lang/en_us.json
@@ -13,5 +13,22 @@
   "item.birds_and_feathers.blue_feather": "Blue feather",
   "item.birds_and_feathers.purple_feather": "Purple feather",
   "item.birds_and_feathers.magenta_feather": "Magenta feather",
-  "item.birds_and_feathers.pink_feather": "Pink feather"
+  "item.birds_and_feathers.pink_feather": "Pink feather",
+
+  "block.birds_and_feathers.white_feather_block": "White feather block",
+  "block.birds_and_feathers.light gray_feather_block": "Light gray feather block",
+  "block.birds_and_feathers.gray_feather_block": "Gray feather block",
+  "block.birds_and_feathers.black_feather_block": "Black feather block",
+  "block.birds_and_feathers.brown_feather_block": "Brown feather block",
+  "block.birds_and_feathers.red_feather_block": "Red feather block",
+  "block.birds_and_feathers.orange_feather_block": "Orange feather block",
+  "block.birds_and_feathers.yellow_feather_block": "Yellow feather block",
+  "block.birds_and_feathers.lime_feather_block": "Lime feather block",
+  "block.birds_and_feathers.green_feather_block": "Green feather block",
+  "block.birds_and_feathers.cyan_feather_block": "Cyan feather block",
+  "block.birds_and_feathers.light blue_feather_block": "Light blue feather block",
+  "block.birds_and_feathers.blue_feather_block": "Blue feather block",
+  "block.birds_and_feathers.purple_feather_block": "Purple feather block",
+  "block.birds_and_feathers.magenta_feather_block": "Magenta feather block",
+  "block.birds_and_feathers.pink_feather_block": "Pink feather block"
 }
