Added some recipes

--- a/src/main/resources/assets/birds_and_feathers/lang/en_us.json
+++ b/src/main/resources/assets/birds_and_feathers/lang/en_us.json
@@ -16,7 +16,7 @@
   "item.birds_and_feathers.pink_feather": "Pink feather",
 
   "block.birds_and_feathers.white_feather_block": "White feather block",
-  "block.birds_and_feathers.light gray_feather_block": "Light gray feather block",
+  "block.birds_and_feathers.light_gray_feather_block": "Light gray feather block",
   "block.birds_and_feathers.gray_feather_block": "Gray feather block",
   "block.birds_and_feathers.black_feather_block": "Black feather block",
   "block.birds_and_feathers.brown_feather_block": "Brown feather block",
@@ -26,7 +26,7 @@
   "block.birds_and_feathers.lime_feather_block": "Lime feather block",
   "block.birds_and_feathers.green_feather_block": "Green feather block",
   "block.birds_and_feathers.cyan_feather_block": "Cyan feather block",
-  "block.birds_and_feathers.light blue_feather_block": "Light blue feather block",
+  "block.birds_and_feathers.light_blue_feather_block": "Light blue feather block",
   "block.birds_and_feathers.blue_feather_block": "Blue feather block",
   "block.birds_and_feathers.purple_feather_block": "Purple feather block",
   "block.birds_and_feathers.magenta_feather_block": "Magenta feather block",
