Added a custom tab

--- a/src/main/resources/assets/birds_and_feathers/lang/en_us.json
+++ b/src/main/resources/assets/birds_and_feathers/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "itemGroup.featherTab": "Birds and Feathers",
+
   "item.birds_and_feathers.light_gray_feather": "Light gray feather",
   "item.birds_and_feathers.gray_feather": "Gray feather",
   "item.birds_and_feathers.black_feather": "Black feather",
